chrome/browser/resources/contextual_tasks/composebox.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=chrome://resources/cr_elements/cr_shared_vars.css.js
 * #scheme=relative
 * #css_wrapper_metadata_end */

/* TODO(crbug.com/461801378): Add styling for non-AIM pages. */

:host {
  --aim-header-height: 66px;
  --cancel-button-inline-end: 16px;
  --cancel-button-top: 12px;
  --composebox-collapsed-height: 90px;
  --composebox-margin-bottom: 30px;
  --composebox-start-indent: 15px;
  --context-carousel-inline-end-spacing: 24px;
  --context-carousel-inline-start-spacing: 24px;
  --composebox-container-height:
    calc(var(--composebox-height) + var(--composebox-dropdown-height)
      + var(--composebox-margin-bottom)
    );
  /* Max width for tab and side-panel mode (from Figma) */
  --composebox-max-width: 692px;
  /* Shared sizing between voice cancel and regular cancel buttons. */
  --composebox-cancel-button-size: 40px;
  --composebox-icon-menu-bottom: 12px;
  --composebox-submit-container-size: 48px;
  --composebox-submit-container-inline-end:
      var(--composebox-last-icon-inline-end);
  --composebox-last-icon-inline-end: 12px;
  --cr-composebox-file-chip-url-text-size: 11px;
  --cr-composebox-file-chip-title-text-size: 14px;
  --cr-searchbox-height: 52px;
  --cr-searchbox-min-width: min(calc(100%), 1100px);
  --icon-menu-spacing: 6px;
  --icon-menu-icon-size: 24px;
  --icon-menu-button-size: 40px;
  /* TODO(crbug.com/467758241): Change
   * pdf icon to one without outline just for contextual tasks.
   * Border-radius is temporary fix to hide
   * most of outline.
   */
  --pdf-icon-border-radius: 12px;
  --pdf-icon-size: 16px;
}

/* Composebox default colors are for light mode on AIM results. */
#composeboxContainer {
  --color-composebox-scrim-background: var(--search-background-color);
  --composebox-container-height:
    calc(var(--composebox-height) + var(--composebox-dropdown-height)
    + var(--composebox-margin-bottom));

  align-items: center;
  height: auto;
  justify-content: flex-end;
  min-height: var(--composebox-collapsed-height);
  position: relative;
  /* Do not set pointer-events to none; is inherited by
   * whole composebox + buttons. Width var taken from parent.
   */
  width: 100%;
}

:host(:not([is-zero-state])) #composeboxContainer {
  margin-bottom: var(--composebox-margin-bottom);
}

/* When the composebox is focused, make the background color
 * extend to the top of the screen so that the user can see the full
 * composebox when it is expanded. */
:host([is-composebox-focused])
  #composeboxContainer:has(#composebox[show-dropdown_]) {
  background: linear-gradient(to top,
    rgba(var(--search-background-color-rgb), 1) var(--composebox-container-height),
    rgba(var(--search-background-color-rgb), 0.9) 75vh,
  transparent);
  height: 100%;
  inset-block-start: auto;
  pointer-events: auto;
  position: fixed;
}

#composebox {
  --composebox-thumbnail-img-chip-size: 44px;
  --composebox-width: calc(100% - 30px); /* 15px on each side */
  --expanded-border-radius: 24px;
  --input-bottom-spacing: 16px;
  --inset-start-indent_: 15px;
  --text-input-left-spacing: 24px;
  --text-input-top-spacing: 16px;
  --composebox-context-menu-entrypoint-button-color: var(--color-composebox-voice-lens-button);

  box-shadow: none;
  display: block;
  inset-inline-start: var(--inset-start-indent_);
  max-width: var(--composebox-max-width);
  position: relative;
  /* 100% - (right indent + left indent), up to max width. */
  width: calc(100% - (15px + var(--inset-start-indent_)));
  border: 1px solid var(--color-composebox-input-plate-outline);
  box-sizing: border-box;
  /* Fast out (start), slow in (end) box shadow transition. */
  transition: box-shadow 600ms cubic-bezier(0.4, 0.0, 0.2, 1);
}

:host([is-side-panel]) #composebox {
  inset-inline-start: var(--composebox-start-indent);
  max-width: var(--composebox-max-width);
  min-width: 200px;
  /* 15px on each side -> 30px. */
  width: calc(100% - 30px);
}

/* TODO(crbug.com/466201452): Check this relayout logic
 * once Google.com AIM is RTL that this matches AIM.
 */

@media (min-width: 789px) {
  :host(:not([is-zero-state])[is-side-panel]) #composeboxContainer {
    /* 96px gutter + 5px for text indentation in thread. */
    --composebox-start-indent: 101px;
  }
}

@media (min-width: 480px) {
  :host(:not([is-zero-state]):not([is-side-panel])) #composeboxContainer {
    /* Google.com uses 96px for indent column, and 5px left padding.
     * Aligns the input text of the composebox with the AIM thread.
     */
    --composebox-start-indent: 101px;
  }
  #composebox {
    --inset-start-indent_: var(--composebox-start-indent);
  }
}

/* W/more space, indent further to match AIM for both side panel and full tab.*/
@media (min-width: 1420px) {
  :host(:not([is-zero-state]):not([is-side-panel])) #composeboxContainer,
  :host([is-side-panel]:not([is-zero-state])) #composeboxContainer {
    /* At this width, indent column should be 280px + 5px left padding.
     * Google.com AIM has 20 other 36px columns as "inset end space",
     * with 20px gaps, which = 720px of cols, 21 * 20px = 420px of gaps.
     * Combined, this is 1140px of fixed space.
     * The first and last columns are 1fr, so the remaining fluid
     * space is (100% - 1140px) / 2 since we are splitting between the
     * 2 columns, which = 50% - 570px per flex column. Since at this
     * breakpoint, we need at least 280px of left indentation to match
     * the AIM thread, we do not start growing until flexible
     * indentation space > 280px of minimum left indentation.
     */
    --composebox-start-indent: max(285px, calc(50% - 570px));
  }

  #composebox {
    --inset-start-indent_: var(--composebox-start-indent);
  }
}
/* ... */

